force-app/main/default/objects/Attendance_Log__c/Attendance_Log__c.object-meta.xml
<CustomObject>
    <label>Attendance Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Attendance Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>