force-app/main/default/objects/Attendance_Log__c/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <formula>IF(Check_Out__c&gt;=Check_In__c, &quot;Present&quot;, &quot;Incomplete&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Status</label>
    <type>Text</type>
</CustomField>