force-app/main/default/objects/Attendance_Log__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <formula>( Check_Out__c  -  Check_In__c )*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>