force-app/main/default/objects/Attendance_Log__c/validationRules/AttendanceDateCannotBeFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>AttendanceDateCannotBeFuture</fullName>
    <active>true</active>
    <errorConditionFormula>Attendance_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Attendance Date cannot be in the future.</errorMessage>
</ValidationRule>