force-app/main/default/objects/Attendance_Log__c/validationRules/CheckoutAfterCheckin.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckoutAfterCheckin</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Check_In__c)),
    NOT(ISBLANK(Check_Out__c)),
    Check_Out__c &lt;= Check_In__c
)</errorConditionFormula>
    <errorMessage>Check out time cannot be before check in time,</errorMessage>
</ValidationRule>