force-app/main/default/objects/Attendance_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Check_In__c</columns>
    <columns>Check_Out__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>